--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,16 @@ dependencies:
   shared_preferences:
   jwt_decoder:
   flutter_slidable:
+  flutter_svg: ^0.22.0
+  badges: ^2.0.3
+  flutter_rating_bar: ^4.0.1
+  sliding_sheet: ^0.5.2
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
