--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   badges: ^2.0.3
   flutter_rating_bar: ^4.0.1
   sliding_sheet: ^0.5.2
+  flutter_stripe: ^9.6.0
  
 
   # The following adds the Cupertino Icons font to your application.
